Fixed bug #24 - Card Alignment

--- a/app/webroot/theme/version1/css/main.css
+++ b/app/webroot/theme/version1/css/main.css
@@ -926,12 +926,17 @@ div.card-container{
 	margin: 0 0 0 -25px;
 	padding: 0;
 	width: 100%;
-	height: 500px;
+	height: 100%;
 	overflow: hidden;
 }
 div.card-container div.slides-container{
 	position: relative;
+	display: block;
 	width: 9999px;
+	height: 400px;
+	margin: 0;
+	z-index: 1;
+	background: red;
 }
 div.card-container div.slides-container div.test-card ul.test-card-actions{
 	position: relative;
@@ -952,15 +957,19 @@ div.card-container div.slides-container div.test-card ul.test-card-actions li{
 }
 div.card-container .slide-navigation{
 	position: relative;
+	display: block;
 	width: 600px;
-	height: 100%;
-	margin: 0 auto;
+	margin: 25px auto;
+	z-index: 3;
+	clear: both;
 }
 div.shortcut-guide{
-	margin: 0;
+	position: relative;
+	margin: 25px 0 0 0;
 	font-size: 12px;
 	color: #a7a7a7;
-	z-index: 5;
+	z-index: 1;
+	clear: both;
 }
 div.shortcut-guide legend{
 	border-bottom: 1px solid #a7a7a7;
